<?xml version="1.0"?>
<package>
  <name>nav2djs</name>
  <version>0.2.0</version>
  <description>2D Navigation Widget Written for rosjs.</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/nav2djs</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/nav2djs/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/nav2djs</url>

  <buildtool_depend>catkin</buildtool_depend>
</package>
